# python-2022-3.8-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
app/: cli.py  command.py  data.py  filters.py
tests/: test_filters.py
